--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selling By Zoro Server Checker - Myanmar</title>
-
+    <title>Selling By Zoro's Server Checker - Myanmar</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Pyidaungsu&display=swap');
@@ -15,6 +14,7 @@
 
     <div class="bg-slate-800 p-8 rounded-2xl shadow-2xl w-full max-w-md border border-slate-700">
         <h2 class="text-2xl font-bold mb-6 text-center text-blue-400">Selling By Zoro's Server Checker</h2>
+
         <div class="space-y-5">
             <div>
                 <label class="block text-sm text-slate-400 mb-1">Player ID</label>
